--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "things-sms-test-data-generator",
+  "name": "things-sms-model-change",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
