--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.11.0",
-    "inquirer": "^3.3.0"
+    "inquirer": "^3.3.0",
+    "csv": "^1.1.1"
   }
 }
